# libopencl-stub

./: README.md  meson.build  meson_options.txt  opencl-stub-inline.h  opencl-stub.c  opencl-stub.h
test/: meson.build  test.c
